--- a/Terminal Mystery/2.html
+++ b/Terminal Mystery/2.html
@@ -10,7 +10,6 @@
     <meta name="keywords" content="keywords,here">
     <link rel="stylesheet" href="style.css" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script src="typed.js"></script>
 </head>
 
 <body>
@@ -20,16 +19,7 @@
         <br>gavin@localhost:~$
         <input class="wider"></input>
     </div>
-<!--<div class="element"></div>
-    <script>
-  $(function(){
-      $(".element").typed({
-        strings: ["First sentence.", "Second sentence."],
-        typeSpeed: 0
-      });
-  });
-</script>-->
-    
+
     <script>
  var cmds = [
      "",
@@ -48,19 +38,23 @@
  var $out = $("#output");
  $("#screen input").focus();
  $("#screen input").on("keydown", function(event) {
-             if (event.which === 13) { // Enter key pressed
+             if (event.which === 13) {
                  var $this = $(this),
-                     val = $this.val();
+                     valArgs = $this.val();
                  $this.focus().val("");
+                 var val = valArs.toLowerCase();
+                 function cmdUse() {
+                     $out.append(`gavin@localhost:~$ ${val}<br>`);
+                 }
                  if (val === "") {
                      $out.append("gavin@localhost:~$<br>");
                  } else
                  if (val === "help") {
-                     $out.append("gavin@localhost:~$ help<br>");
+                     cmdUse();
                      $out.append("Here's a list of commands:<br>help - Sends a list of commands<br>concept - Explains how to play this game<br>inbox - Shows your inbox<br>show [file|message] - Shows the contents of a file or message<br>connect [host] [password] - Connects to the specified host.<br>clear - Clears the terminal<br>");
                  } else
                  if (val === "inbox") {
-                     $out.append("gavin@localhost:~$ inbox<br>");
+                     cmdUse();
                      $out.append("Your Inbox:<br>↳ need your help<br>↳ good job<br>↳ we've got this<br>");
                  } else
                  if (val === "clear") {
@@ -68,29 +62,29 @@
                  } else
                  if (val.startsWith("show")) {
                      if (!cmds.includes(val)) {
-                         $out.append(`gavin@localhost:~$ ${val}<br>`);
+                         cmdUse();
                          $out.append(`Could not find a file / message with the name of '${val.substring(5)}'.<br>`);
                      }
                      if (val === "show need your help") {
-                         $out.append("gavin@localhost:~$ show need your help<br>");
+                         cmdUse();
                          $out.append("Viewing the content of need your help:<br>Dear Gavin,<br>    For the past month or so I've been keeping an eye on a group of cyber<br>terrorists who call themselves, M.A.S.K.  (Mobile Armored Strike Kommand).<br>Your hacking skills are needed to take down this skulking espionage,<br>so get as much information on the group as you can.<br>Best of Luck,<br>Mike<br>P.S. You can gain access to one of their computers by <br>connecting with the host: root<br>and the password: m4sk<br>");
                      }
                      if (val === "show we've got this") {
-                         $out.append("gavin@localhost:~$ show we've got this<br>");
+                         cmdUse();
                          $out.append("Viewing the content of we've got this:<br>Dear Gavin,<br>Amazing work out there! Or should I say, on your computer.<br>Anyways, we now have enough information to stop M.A.S.K. and their attack on the Peruvian Government.<br>Crazy what these terrorist groups are trying to do these days.<br>And A.C.R.O.S.T.I.C., I wonder what they have to do with this whole thing... I'll put them on the watch list.<br>Again, amazing job with your information gathering and hacking skills, you've done your country well.<br>Yours respectfully,<br>Mike<br>");
                      } 
                      if (val === "show good job") {
-                         $out.append("gavin@localhost:~$ show good job<br>");
+                         cmdUse();
                          $out.append("Viewing the content of good job:<br>Dear Gavin,<br>    Great job getting into one of M.A.S.K.'s computers. We now know what they plan<br>and with some more evidence we can completley trump their mission.<br>You can try rooting around on their computer more, try finding any other files that could give us more information.<br>Best of luck,<br>Mike<br>");
                      }
                      else if (val === "show") {
-                         $out.append("gavin@localhost:~$ show<br>");
+                         cmdUse();
                          $out.append("Specify a file / message to show.<br>");
                      }
                  } else
                      if(val.startsWith("connect")) {
                        if(val === "connect root m4sk") {
-                         $out.append("gavin@localhost:~$ connect root m4sk<br>");
+                         cmdUse();
                          $out.append("Connecting");
                          setTimeout(function() { $out.append("."); }, 1000);
                          setTimeout(function() { $out.append("."); }, 2000);
@@ -106,7 +100,7 @@
                          $out.append(`Failed to connect. Incorrect host and/or password.<br>`);
                        }
                      } else {
-                       $out.append(`gavin@localhost:~$ ${val}<br>`);
+                       cmdUse();
                        $out.append("Command not recognized.<br>");
                      }
                      $this.val("");
