--- a/teaching-sister-to-code/index.html
+++ b/teaching-sister-to-code/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Teaching Ava to code</title>
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   </head>
   <body>
-    <center><h1 style="color: #0072BB">It's my birthday!</h1></center>
+    <center><h1 style="color: #0072BB font-family: 'Lobster', cursive;">It's my birthday!</h1></center>
   </body>
 </html>
