--- a/teaching-sister-to-code/index.html
+++ b/teaching-sister-to-code/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <style>
-      .wrapper {
+     .wrapper { 
   height: 100%;
   width: 100%;
   left:0;
@@ -42,15 +42,14 @@ background-size: 1800% 1800%;
     0%{background-position:0% 82%}
     50%{background-position:100% 19%}
     100%{background-position:0% 82%}
-} 
-      }
+}
       h1 {
         color: #0072BB;
         font-family: 'Lobster', cursive;
         font-size: 100px;
       }
     </style>
-    <div class="wrapper")>
+    <div class="wrapper">
     <center><h1>I'm 7 years old</h1></center>
       </div>
   </body>
