--- a/teaching-sister-to-code/index.html
+++ b/teaching-sister-to-code/index.html
@@ -49,8 +49,17 @@ background-size: 1800% 1800%;
         font-size: 100px;
       }
     </style>
+    <script src="typed.js"></script>
+<script>
+  document.addEventListener('DOMContentLoaded', function(){
+      Typed.new('.element', {
+        strings: ["First sentence.", "Second sentence."],
+        typeSpeed: 0
+      });
+  });
+</script>
     <div class="wrapper">
-    <center><h1>I'm 7 years old.</h1></center>
+      <div class="element"><center><h1>I'm 7 years old.</h1></center></div>
       </div>
   </body>
 </html>
