--- a/teaching-sister-to-code/index.html
+++ b/teaching-sister-to-code/index.html
@@ -49,6 +49,27 @@ background-size: 1800% 1800%;
         font-family: 'Lobster', cursive;
         font-size: 100px;
       }
+      .typed-cursor{
+    opacity: 1;
+    -webkit-animation: blink 0.7s infinite;
+    -moz-animation: blink 0.7s infinite;
+    animation: blink 0.7s infinite;
+}
+@keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+@-webkit-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+@-moz-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
     </style>
     <script src="typed.js"></script>
 <script>
