--- a/toasty-website/index.html
+++ b/toasty-website/index.html
@@ -18,11 +18,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand shake-slow" href="http://iamtoast.gq">i am toast</a>
+          <a class="navbar-brand shake-slow" href="http://toastythebot.tk">Toasty</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="http://iamtoast.gq">Home</a></li>
             <li><a href="https://discordapp.com/oauth2/authorize?client_id=208946600620326912&scope=bot&permissions=403041318">Invite</a></li>
             <li><a href="https://discordapp.com/invite/sKCDdfp">Server</a></li>
             <li><a href="/features">Features</a></li>
