--- a/toasty-website/index.html
+++ b/toasty-website/index.html
@@ -18,7 +18,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand shake-slow" href="http://toastythebot.tk">Toasty</a>
+          <a class="navbar-brand shake-slow" href="http://toastythebot.tk"><img src="http://i.imgur.com/DkNcwQv.jpg"> Toasty</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
