--- a/toasty-website/index.html
+++ b/toasty-website/index.html
@@ -18,7 +18,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand shake-slow" href="http://toastythebot.tk"><img src="http://i.imgur.com/DkNcwQv.jpg" height="40px" width="90px"></a>
+          <a class="navbar-brand shake-slow" href="http://toastythebot.tk"><img class="circular" src="https://cdn.discordapp.com/avatars/208946659361554432/a44fcd3dc26da3d00b712b86556b8505.jpg?size=1024"></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
