--- a/toasty-website/index.html
+++ b/toasty-website/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Toasty the Discord bot. A fun, moderating and delicious Discord bot for all of your needs. Created by i am toast.">
+    <meta name="author" content="Gavin Wainwright">
     <title>Toasty the Discord bot</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css" type="text/css">
@@ -18,12 +20,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand shake-slow" href="http://toastythebot.tk"><img class="circular" src="https://cdn.discordapp.com/avatars/208946659361554432/a44fcd3dc26da3d00b712b86556b8505.jpg?size=1024"></a>
+          <a class="navbar-brand shake-slow" href="http://toastythebot.tk"><img style="width: 100px; height: 100px; border-radius: 50%;" src="https://cdn.discordapp.com/avatars/208946659361554432/a44fcd3dc26da3d00b712b86556b8505.jpg?size=1024"></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="https://discordapp.com/oauth2/authorize?client_id=208946600620326912&scope=bot&permissions=403041318">Invite</a></li>
-            <li><a href="https://discordapp.com/invite/sKCDdfp">Server</a></li>
+            <li><a href="https://discordapp.com/invite/sKCDdfp">Support Server</a></li>
             <li><a href="/features">Features</a></li>
             <li><a href="/donate">Donate</a></li>
           </ul>
