--- a/toasty-website/index.html
+++ b/toasty-website/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+    <link rel="stylesheet" href="animate.css" type="text/css">
   <link rel="stylesheet" href="style.css" type="text/css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
@@ -50,7 +51,7 @@
     </script>
             <div class="rainbow">
               <div style="padding-top: 50px;">
-    <center><h1>Toasty</h1>
+    <center><h1 class="animated pulse fadeIn infinite">Toasty</h1>
       <h3>A discord bot that's useful, fun and delicious!</h3>
       <div class="typingStats"></div></center>
               </div>
