--- a/toasty-website/index.html
+++ b/toasty-website/index.html
@@ -51,7 +51,7 @@
     </script>
             <div class="rainbow">
               <div style="padding-top: 50px;">
-    <center><h1 class="animated pulse fadeIn infinite">Toasty</h1>
+    <center><h1 class="animated pulse infinite">Toasty</h1>
       <h3>A discord bot that's useful, fun and delicious!</h3>
       <div class="typingStats"></div></center>
               </div>
