--- a/toasty-website/index.html
+++ b/toasty-website/index.html
@@ -31,7 +31,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="https://discordapp.com/oauth2/authorize?client_id=208946600620326912&scope=bot&permissions=403041318">Invite</a></li>
             <li><a href="https://discordapp.com/invite/sKCDdfp">Support Server</a></li>
-            <li><a href="/features">Features</a></li>
+            <li><a href="#features">Features</a></li>
             <li><a href="https://toastythebot.bigcartel.com">Donate</a></li>
           </ul>
         </div><!--/.nav-collapse -->
