--- a/Terminal Mystery/animation.html
+++ b/Terminal Mystery/animation.html
@@ -15,6 +15,9 @@
         .blink_me {
   animation: blinker 1s linear infinite;
             color: red;
+            width:500px;
+            height:100px;
+            border:1px solid #000;
 }
 
 @keyframes blinker {  
@@ -27,7 +30,7 @@
 
     <div id="screen">Welcome to Terminal Mystery.&nbsp;&nbsp;&nbsp;&nbsp;(indev.5)
         <br>Type 'help' for a list of commands.
-       <center><span class="blink_me"><div style="width:500px;height:100px;border:1px solid #000;">This is a rectangle!</div></span></center>
+       <center><span class="blink_me">This is a rectangle!</span></center>
         <div id="output"></div>
         <br>gavin@localhost:~$
         <input class="wider"></input>
