--- a/Terminal Mystery/animation.html
+++ b/Terminal Mystery/animation.html
@@ -18,10 +18,18 @@
             width:500px;
             height:100px;
             border:1px solid #000;
+            opacity: 0;
 }
 
-@keyframes blinker {  
-  50% { opacity: 0; }
+@keyframes blinking {
+  from,
+  49.9% {
+    opacity: 0;
+  }
+  50%,
+  to {
+    opacity: 1;
+  }
 }
     </style>
 </head>
