--- a/Terminal Mystery/animation.html
+++ b/Terminal Mystery/animation.html
@@ -38,7 +38,7 @@
 
     <div id="screen">Welcome to Terminal Mystery.&nbsp;&nbsp;&nbsp;&nbsp;(indev.5)
         <br>Type 'help' for a list of commands.
-       <center><span class="blink_me">This is a rectangle!</span></center>
+        <center><span class="blink_me"><b>ERROR: UNDER ATTACK!</b></span></center>
         <div id="output"></div>
         <br>gavin@localhost:~$
         <input class="wider"></input>
