--- a/whiteboard/index.html
+++ b/whiteboard/index.html
@@ -5,6 +5,6 @@
     <title>Whiteboard</title>
   </head>
   <body>
-      <input type="file"></input>
+      <input type="file" id="file" onchange="handleFile(this.files)">
   </body>
 </html>
