--- a/whiteboard/index.html
+++ b/whiteboard/index.html
@@ -31,7 +31,7 @@
 	<body>
 		<h1>Simple Ocrad.js Example</h1>
 
-		<script src="../../ocrad.js"></script>
+		<script src="ocrad.js"></script>
 		<script>
 			function recognize_image(){
 				document.getElementById('transcription').innerText = "(Recognizing...)"
